--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
    height: auto;
    min-height: 20rem;
    padding: 10rem 0 10rem 0;
-   background-image: url(../f06aaa104a2386ef97825c22610636ed.jpg);
+   background-image: url(./f06aaa104a2386ef97825c22610636ed.jpg);
    background-position: center;
    background-repeat: no-repeat;
    background-attachment: scroll;
@@ -79,7 +79,7 @@ nav ul>li a:hover{
    height: auto;
    min-height: 20rem;
    padding: 10rem 0 10rem 0;
-    background-image: url(../7d3e429827adc99ac37ca0bd7fc1653f.jpg);
+    background-image: url(./7d3e429827adc99ac37ca0bd7fc1653f.jpg);
    background-position: center;
    background-repeat: no-repeat;
    background-attachment: scroll;
@@ -112,7 +112,7 @@ nav ul>li a:hover{
    height: auto;
    min-height: 20rem;
    padding: 10rem 0 10rem 0;
-   background-image: url(../3d44.png);
+   background-image: url(./3d44.png);
    background-position: center;
    background-repeat: no-repeat;
    background-attachment: scroll;
